--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ Keyword Index
 <div class="TreeItem">
 <img src="Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="html/b3ff7ae9-7d4a-49b5-89c4-4e8832660d8d.htm" target="TopicContent">Running Naiad programs on Microsoft Azure</a>
 </div>
+<div class="TreeItem">
+<img src="Item.gif"/><a class="UnselectedNode" onclick="javascript: return SelectNode(this);" href="html/1aff01be-2d57-406e-9f1d-b0872c8733e5.htm" target="TopicContent">Implementing a custom Naiad vertex</a>
+</div>
 <div class="TreeNode">
 <img class="TreeNodeImg" onclick="javascript: Toggle(this);" src="Collapsed.gif"/><a class="UnselectedNode" onclick="javascript: return Expand(this);" href="html/c2a31aaa-d867-4d3b-9315-dbb7c7527659.htm" target="TopicContent">Version History</a>
 <div class="Hidden">
